tests/NormalTests/paczka2/big_fuzzy/82964067.err
Error in line 5: yGUhnWKwBrc S953 40,2
Error in line 12: JqkLJ S752 77,92
Error in line 7: JqkLJ S953 95,0
Error in line 14: S953 S677 73,0
Error in line 6: yGUhnWKwBrc S677 47,5
Error in line 13: JqkLJ S66 15,1
Error in line 18: yGUhnWKwBrc S953 77,9
Error in line 30: yGUhnWKwBrc S752 79,4
Error in line 24: ZntIefgo9Vi S677 221,1
Error in line 36: ZntIefgo9Vi S953 16,2
Error in line 43: kYq S752 83,0
Error in line 49: JqkLJ S953 14,19
Error in line 52: yEuRVipF1 S66 75,6
Error in line 44: kYq S677 94,3
Error in line 55: yEuRVipF1 S752 31,1
Error in line 48: ZntIefgo9Vi S752 49,2
Error in line 79: xk0 S677 87,2
Error in line 80: xk0 S752 88,0
Error in line 86: yGUhnWKwBrc S66 -5,9
Error in line 68: JqkLJ S66 77,8
Error in line 87: kYq S752 323,6
Error in line 102: kYq S677 89,8
Error in line 111: S953 S752 154,4
Error in line 118: ZntIefgo9Vi S66 48,6
Error in line 114: S953 S677 41,4
Error in line 138: yGUhnWKwBrc S953 37,7
Error in line 142: ZntIefgo9Vi S66 -2,8
Error in line 139: kYq S752 80,5
Error in line 151: S953 S752 55,8
Error in line 141: yGUhnWKwBrc S677 15,4
Error in line 156: JqkLJ S953 73,5
Error in line 164: yGUhnWKwBrc S752 90,2
Error in line 176: ZntIefgo9Vi S66 445,3
Error in line 183: yEuRVipF1 S66 84,1
Error in line 187: kYq S66 21,1
Error in line 178: JqkLJ S677 97,4
Error in line 181: ZntIefgo9Vi S677 0,2
Error in line 192: kYq S953 45,0
Error in line 201: JqkLJ S953 39,4
Error in line 203: JqkLJ S752 8,2
Error in line 215: JqkLJ S752 47,4
Error in line 226: JqkLJ S752 29,0
